# wine-quality-cloud-run

./: .gitignore  README.md  deploy-cloud-run.ps1
app/: Dockerfile  README.md  app.py  pyproject.toml
docs/plans/: 2026-06-28-optuna-mlflow-design.md  2026-06-29-gcp-deployment-design.md  2026-06-29-pedagogical-readme-design.md  2026-06-29-readme-redesign.md
parte0/: README.md  optimize.py  pyproject.toml  train.py
